# 3Dprinter-BLDC-control

./: .gitignore  .gitmodules
CSV/: MeasDataNew.csv  MeasDataNewCalc.xlsx  Step_mosfet.ods  Tmeas.csv  dataSeveral.csv  dataSeveralAnal.xlsx  i2c_pid_step.csv  i2c_pid_step_calc.xlsx  i2c_test_newMotor.csv  i2c_test_newMotor_calc.xlsx  i2c_ws_test.csv  i2c_ws_test_calc.xlsx  meas0calc.xlsx  meas0calcDitte.xlsx  meas1.csv  meas1Calc.csv.xlsx  meas2.csv  meas2Calc.xlsx  meas4.csv  meas5_mosfet.csv  meas6_mosfet.csv  step_withPI_11.5ws.csv  step_withPI_11.5wsCalc.xlsx
RPI_2040/: arduino-cli.yaml  shell.nix
RPI_2040/rpi_sdk_i2c_measure/: CMakeLists.txt  main.cpp
STM32_Template/: shell.nix
Schematics/: shell.nix
acp_test/: acp_sample_calc.xlsx  flowCalcs.mw
dumdum/: calcForMeasureTimes.mw  curveRespons.m  curveSimple.m  model_DCmotor_simulink_wip.slxc  responsRandom.m  stepResponsCurve.mat
jupyterlab/: Extruder_motor_selection.ipynb  J_calc.ipynb  Models.ipynb  Motor_variables.ipynb  ellipticFilter.ipynb  pulsewidth_from_csv.py  scope_0.csv  scope_0_width.csv  scope_1_width.csv  scope_2.csv  scope_2_width.csv  shell.nix
pictures/: stepper-motor.xcf
simulations/: Discrete_PI.m  Motor_step.asv  Motor_step.m  PID_konstants.asv  PID_konstants.m  Root_locus.m  Untitled.ipynb  backCalcForWrongMeasures.mw  checkMapleDoc.mw  control1order.asv  control1order.m  controlSystemPID_calc.m  createaxes.m  digitalFilterCreation.asv  digitalFilterCreation.m  model_DCmotor_simulink_wip.slx  model_DCmotor_simulink_wip.slx.autosave  model_DCmotor_simulink_wip.slxc  shell.nix  (+8 more)
(+137 files in other folders)
